Cacti CHANGELOG

1.1.36
-issue#1211: CDEF and VDEF Item Edit do not use form API
-issue#1331: Maintenance time should occur at midnight, not random time in day
-issue#1334: Console->Users->(Edit) Permissions checkmark descriptions missing
-issue#1336: Fix issue with $config not being defined
-issue#1339: First graph of second page does not render
-issue#1340: Unable to open Time Graph View in new tab
-issue#1348: Toggle context menu of Zoom
-issue#1351: Errorimage does not render on systems without GD ttf support
-issue#1353: New install with missing config.php silently throws errors
-issue#1355: If only one tree exists, don't show move arrows
-issue#1357: Data Profile - Disable fields shown temporarily as editable
-issue#1359: Settings page can generate error if expected tab not found
-issue#1362: DSStats Avg/Peak function broken due to change in RRDtool processing
-issue#1365: Plugin Management - Reject invalid folder names
-issue: Fixed some language string inconsistencies
-issue: Update filter layout of Data Query Cache to match Poller Cache
-issue: Remove spurious php code from checkbox area in user admin
-issue: Minor plugin permissions format change
-issue: Implementation of error handling causing errors on New Graphs page
-issue: Remove deprecated setting fom DSStats settings
-issue: Move several DSStats logic to standard functions
-issue: Disable graph context menu items that have no right context
-issue: Resolve JavaScript errors when coming out of Realtime
-issue: snmpagent generates a Fatal error when plugin directories duplicated
-issue: Undefined index 'profile_referer' in auth_profile.php
-feature: Allow searching of SNMP Index in View Data Query Cache
-feature: Updated Dutch translations

1.1.35
-issue#114: *all_max_peak* percentile calculations incorrect
-issue#430: Pressing Back often fails to work as expected
-issue#564: Fail to move items in graph template as desired
-issue#981: Hyperlinks for Data Profile stats